...
                    if (hasUnread) {
                        KarikaText(
                            modifier = Modifier.onClick { component.markAllAsRead() },
                            color = KarikaColors.Blue,
                            fontWeight = FontWeight.W700,
                            textSize = 13.sp,
                            text = "Označi sve kao pročitano"
                        )
                    }
                }
            }
            items(items = notifications) {
                NotificationItem(it, component)
...
