...
            horizontalArrangement = Arrangement.spacedBy(4.dp)
        ) {
            PrimaryButton(
                modifier = Modifier
                    .height(50.dp)
                    .weight(1f),
                title = "Moj nalog",
                icon = Res.drawable.ic_navigation_profile,
                color = KarikaColors.Gray2,
                contentPadding = PaddingValues(4.dp)
            ) {
                component.appNavigate(AppConfig.Account)
            }
...
